--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "csv-writer": "^1.6.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.1"
+    "mongoose": "^8.1.1",
+    "node-cron": "^3.0.3"
   }
 }
